--- a/public/style/main.css
+++ b/public/style/main.css
@@ -26,7 +26,15 @@ a {
   background-color: #1BBC9B;
   color: #FFF;
 }
+.userInputs .move-0 {
+  background-color: #1BBC9B;
+  color: #FFF;
+}
 .tile.tile-4 {
+  background-color: #2DCC70;
+  color: #FFF;
+}
+.userInputs .move-1 {
   background-color: #2DCC70;
   color: #FFF;
 }
@@ -34,7 +42,15 @@ a {
   background-color: #3399DB;
   color: #FFF;
 }
+.userInputs .move-2 {
+  background-color: #3399DB;
+  color: #FFF;
+}
 .tile.tile-16 {
+  background-color: #34495C;
+  color: #FFF;
+}
+.userInputs .move-3 {
   background-color: #34495C;
   color: #FFF;
 }
